# qcom-embedded-power-measurement

./: .gitignore  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  README.md  SECURITY.md  repolint.json
examples/C++/: CMakeLists.txt
examples/C++/epm-cli/: CMakeLists.txt  main.cpp
examples/C++/udas-cli/: CMakeLists.txt  main.cpp
interfaces/: CMakeLists.txt
interfaces/C#/EPMDevInterop/: EPMDev.cs  EPMDevInterop.sln
interfaces/C++/: CMakeLists.txt
interfaces/C++/EPMDev/: CMakeLists.txt  DevEPMCore.cpp  DevEPMCore.h  EPMDev.cpp  EPMDev.h  EPMDev.pro
interfaces/C++/UDASDev/: CMakeLists.txt  DevUDASCore.cpp  DevUDASCore.h  UDASDev.cpp  UDASDev.h  UDASDev.pro
interfaces/Python/: setup.bat  setup.cfg  setup.py
interfaces/Python/EPMDev/: EPMDev.py  __init__.py
interfaces/Python/UDASDev/: UDASDev.py  __init__.py
src/applications/: CMakeLists.txt
src/applications/bugwriter/: BugWriter.pro  BugWriterApplication.cpp  BugWriterApplication.h  BugWriterDefines.h  BugWriterPreferences.cpp  BugWriterPreferences.h  BugWriterWindow.cpp  BugWriterWindow.h  BugWriterWindow.ui  CMakeLists.txt  EmailWriter.cpp  EmailWriter.h  IssueWriter.cpp  IssueWriter.h  main.cpp
src/applications/epm/: CMakeLists.txt  EPM.pro  EPMApplication.cpp  EPMApplication.h  EPMCommandHashes.h  EPMCommandHashes.txt  EPMDeviceSetup.cpp  EPMDeviceSetup.h  EPMWindow.cpp  EPMWindow.h  PreferencesDialog.cpp  PreferencesDialog.h  PreferencesDialog.ui  QuitEPMEvent.cpp  QuitEPMEvent.h  main.cpp
src/applications/epm-configuration-editor/: CMakeLists.txt  CompileFileDialog.cpp  CompileFileDialog.h  EPMConfigurationApplication.cpp  EPMConfigurationApplication.h  EPMConfigurationEditor.pro  EPMConfigurationWindow.cpp  EPMConfigurationWindow.h  EPMConfigurationWindow.ui  EPMEditorDefines.h  Preferences.cpp  Preferences.h  PreferencesDialog.cpp  PreferencesDialog.h  PreferencesDialog.ui  main.cpp
src/applications/epm-scope/: CMakeLists.txt  DevicePropertiesDialog.cpp  DevicePropertiesDialog.h  DevicePropertiesDialog.ui  EPMDeviceModel.cpp  EPMDeviceModel.h  EPMScope.pro  EPMScopeApplication.cpp  EPMScopeApplication.h  EPMScopeDefines.h  EPMScopePreferences.cpp  EPMScopePreferences.h  EPMScopeWindow.cpp  EPMScopeWindow.h  EPMScopeWindow.ui  PreferencesDialog.cpp  PreferencesDialog.h  PreferencesDialog.ui  main.cpp
src/applications/epm-viewer/: CMakeLists.txt  EPMViewer.pro  EPMViewerApplication.cpp  EPMViewerApplication.h  EPMViewerDefines.h  EPMViewerWindow.cpp  EPMViewerWindow.h  EPMViewerWindow.ui  PreferencesDialog.cpp  PreferencesDialog.h  PreferencesDialog.ui  main.cpp
src/applications/epmdump/: CMakeLists.txt  EPMDump.pro  main.cpp
src/applications/psoc-programmer/: CMakeLists.txt  PSOCProgrammer.pro  PSOCProgrammerCmdLine.cpp  PSOCProgrammerCmdLine.h  main.cpp
src/applications/scldump/: CMakeLists.txt  SCLDump.pro  main.cpp
src/libraries/: CMakeLists.txt
src/libraries/epmlib/: BoardUuid.cpp  BoardUuid.h  CMakeLists.txt  DataSeries.cpp  DataSeries.h  DynamicDataSeries.cpp  DynamicDataSeries.h  EPMChannel.cpp  EPMChannel.h  EPMCompiler.cpp  EPMCompiler.h  EPMConfigFile.cpp  EPMConfigFile.h  EPMDefines.h  EPMDevice.cpp  EPMDevice.h  EPMExportConfigFile.cpp  EPMExportConfigFile.h  EPMGlobalLib.h  EPMIndexType.cpp  EPMIndexType.h  EPMLib.pro  EPMLibDefines.h  EPMPreferences.cpp  EPMPreferences.h  EPMProject.cpp  EPMProject.h  EPMResult.h  EPMRun.cpp  EPMRun.h  EPMRuntimeChannel.cpp  EPMRuntimeChannel.h  EPMRuntimeConfigFile.cpp  EPMRuntimeConfigFile.h  EPMTarget.cpp  EPMTarget.h  EpmLibPrivate.cpp  EpmLibPrivate.h  EpmVersionInfo.h  KratosMapping.cpp  (+24 more)
src/libraries/libexcel/: CMakeLists.txt  QTExcel.cpp  QTExcel.h  Range.h
src/libraries/powerchart/: AxisWidget.cpp  AxisWidget.h  CMakeLists.txt  CurrentChart.cpp  CurrentChart.h  CurrentChartLive.cpp  CurrentChartLive.h  HorizontalPlotZoomer.cpp  LineModelEntryLive.cpp  LineModelEntryLive.h  LineSeriesModel.cpp  LineSeriesModel.h  LineSeriesModelLive.cpp  LineSeriesModelLive.h  PowerChart.cpp  PowerChart.h  PowerChart.pro  PowerChart_global.h  QEPMChart.cpp  QEPMChart.h  QEPMChart.ui  QEPMChartLive.cpp  QEPMChartLive.h  QEPMChartLive.ui  QEPMCursorLines.cpp  QEPMCursorLines.h  QEPMDataSeries.cpp  QEPMDataSeries.h  QEPMDataSeriesLive.cpp  QEPMDataSeriesLive.h  QEPMPlotCurveLive.h  VoltageChart.cpp  VoltageChart.h  VoltageChartLive.cpp  VoltageChartLive.h
src/libraries/qcommon/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  ApplicationEnhancements.cpp  ApplicationEnhancements.h  CMakeLists.txt  ColorSwatch.cpp  ColorSwatch.h  Common.cmake  CustomComboBox.h  HappinessDialog.cpp  HappinessDialog.h  HappinessDialog.ui  IntFilteredEditor.cpp  IntFilteredEditor.h  PainterEffects.cpp  PainterEffects.h  ProgressDialog.cpp  ProgressDialog.h  QCommon.cpp  QCommon.h  QCommonGlobal.h  QEPMApplication.cpp  QEPMApplication.h  StyledLabel.cpp  StyledLabel.h  TableCheckBox.cpp  TableCheckBox.h  TableComboBox.cpp  TableComboBox.h
src/libraries/qcommon-console/: AlpacaDefines.cpp  AlpacaDefines.h  AlpacaSettings.cpp  AlpacaSettings.h  AppCore.cpp  AppCore.h  BasicColor.cpp  BasicColor.h  CMakeLists.txt  CSV.cpp  CSV.h  CommandLineParser.cpp  CommandLineParser.h  Common.cmake  ConsoleApplicationEnhancements.cpp  ConsoleApplicationEnhancements.h  ConsoleInterface.h  CountingStream.cpp  CountingStream.h  DataPoints.h  DebugBoardType.cpp  DebugBoardType.h  Notification.h  PlatformID.cpp  PlatformID.h  PreferencesBase.cpp  PreferencesBase.h  QCommonConsole.cpp  QCommonConsole.h  QCommonConsoleGlobal.h  QEPMSharedLibrary.cpp  QEPMSharedLibrary.h  QualcommChartColor.cpp  QualcommChartColor.h  QualcommColors.h  QuitAppEvent.cpp  QuitAppEvent.h  Range.h  RangedContainer.h  ReceiveInterface.h  (+28 more)
src/libraries/ui-common/: CMakeLists.txt  ColorConversion.cpp  ColorConversion.h  CommandButton.cpp  CommandButton.h  CustomValidator.cpp  CustomValidator.h  EPMChannelTable.cpp  EPMChannelTable.h  EPMChannelTable.ui  EPMDeviceDialog.cpp  EPMDeviceDialog.h  EPMDeviceList.cpp  EPMDeviceList.h  EPMDeviceList.ui  EPMDialog.cpp  EPMDialog.h  EPMDialog.ui  HoverAwareQWindow.cpp  UILib.cpp  (+7 more)
(+632 files in other folders)
